fix(typography): remove text title all caps from components (#3459)
* fix(typography): remove text title all caps from components

* chore(typography): update tests

* chore(typography): update tests after merge conflict

* chore(typography): remove additional instances of title-caps

* fix(typography): remove caps from deprecated global header

* chore(typography): update tests

* fix(typography): create component specific classes in place of utilities

* fix(typography): remove changes from data-table, list-builder, and tree-grid

* chore(typography): update tests

* chore(type): update tests

* fix(type): add back changes to data-table and trees and remove remaining instances of title caps

* chore(type): update tests

* chore(type): update release notes

* chore(type): additional release notes

* fix(type): remove form changes

* fix(type): edit annotations, remove extra div, and move mixins

* fix(type): remove letter spacing and fix inheritance issue with breadcrumbs

* fix(type): add line-height 1.5 to table header

* fix(type): line height normal and lower dropdown font-weight specificity

* fix(panel): annotations

* fix(type): add regular font-weight to title caps utilities

--- a/packages/design-system/ui/components/menus/docs.mdx
+++ b/packages/design-system/ui/components/menus/docs.mdx
@@ -47,7 +47,7 @@ The main thing that distinguishes menus from other popover blocks is keyboard na
 
 <CodeBlock toggleCode={false}>
   <li className="slds-dropdown__header slds-truncate" title="Menu Sub Heading" role="separator">
-    <span className="slds-text-title_caps">Menu Sub Heading</span>
+    <span>Menu Sub Heading</span>
   </li>
 </CodeBlock>
 
