feat(tabs): Add examples for tabs with icons (#3525)
* feat(tab icons)

Just added examples and documentation to reveal the built-in support for icons.
Updated tests.

* (fix)add h2 to content consitently

* (fix) spelling

* (fix) release notes

* (fix) cleanup

-Cleaned up label components to be better scoped to the examples.
-Made the icon tabs markup consistent.

* chore(tabs) add example to previewer

* chore(tabs) update release notes

* Removed unused code and moved icon support to main component

* Lint

* feat(tabs): Add classes to handle spacing behavior

* Update snapshots

* feat(tabs): Remove assistiveText from entity icon

* Update snapshots

--- a/packages/design-system/ui/components/tabs/docs.mdx
+++ b/packages/design-system/ui/components/tabs/docs.mdx
@@ -3,7 +3,8 @@ import CodeBlock from '../../../shared/components/CodeBlock';
 import Example from '../../../shared/components/Example';
 import Blockquote from '../../../shared/components/Blockquote';
 import MobileTabs, { MobileTabGroup, NestedMobileStacked } from './mobile-stack/';
-import { TabsDefault, TabsOverflow, TabsWithNestedScopedTabs, TabsWithCards, TabsMedium, TabsLarge } from '../tabs/base/example';
+import { TabsDefault, TabsOverflow, TabsOverflowIcons, TabsWithNestedScopedTabs, TabsWithCards, TabsMedium, TabsLarge, TabsWithError } from '../tabs/base/example';
+import { SubTabSet, TabWithFocus, TabsWithBorders, TabActionOverflow, StatusTab, OverflowSubtabs } from '../tabs/sub-tabs/example';
 import * as SubTabs from '../tabs/sub-tabs/example';
 import VerticalTabs from '../vertical-tabs/base/example';
 import { getDisplayElementById } from '../../shared/helpers';
@@ -54,6 +55,7 @@ Inactive `.slds-tabs_{variant}__content` containers receive `.slds-hide`.
 When the user clicks a different tab, move the `.slds-active` class and toggle the `.slds-hide`/`.slds-show` classes.
 
 ## With Overflow
+
 The overflow tab style is provided as a tab item type that acts as a menu component and appears as a tab item. It could contain those tab items that don't all fit in a horizontal orientation.
 
 <Example title="Tabs Overflowing">
@@ -65,6 +67,26 @@ The overflow tab style is provided as a tab item type that acts as a menu compon
 <Blockquote type="note" header="Implementation Guidelines">
   The `slds-dropdown__list` element requires a `slds-dropdown_length-with-icon-10` class, where 10 is the maximum number of items that will be visible before having to scroll.
 </Blockquote>
+
+## With Icon
+
+Icons can be used with tabs to help users differentiate among them.
+
+<Example title="Tabs With Icons">
+  <CodeView style={{height: '200px'}}>
+    <TabsOverflowIcons />
+  </CodeView>
+</Example>
+
+## With Error
+
+An icon can be used to communicate when a tab contains a validation error that needs attention.
+
+<Example title="Tabs With Icons">
+  <CodeView style={{height: '200px'}}>
+    <TabsWithError />
+  </CodeView>
+</Example>
 
 ## With Nested Scoped Tabs
 
