--- a/packages/design-system/ui/components/welcome-mat/docs.mdx
+++ b/packages/design-system/ui/components/welcome-mat/docs.mdx
@@ -1,7 +1,10 @@
-import WelcomeMat, { examples as baseExamples, Context } from './base/example';
-import WelcomeMatTrailhead, { examples as trailheadExamples } from './trailhead-connected/example';
+import * as WelcomeMat from './base/example';
+import * as WelcomeMatTrailhead from './trailhead-connected/example';
+import * as Splash from './splash/example';
+import * as InfoOnly from './info-only/example';
 import Example from '../../../shared/components/Example';
 import CodeView from '../../../shared/components/CodeView';
+import { getDisplayElementById } from '../../shared/helpers';
 
 <div className="doc lead">
   A Welcome Mat provides a series of unordered items a user can click to learn about a thematic topic.
@@ -9,9 +12,9 @@ import CodeView from '../../../shared/components/CodeView';
 
 <Example title="Welcome Mat Base">
   <CodeView>
-    <Context>
-      {WelcomeMat}
-    </Context>
+    <WelcomeMat.Context>
+      {WelcomeMat.default}
+    </WelcomeMat.Context>
   </CodeView>
 </Example>
 
@@ -30,9 +33,9 @@ As tiles are completed, they move to the bottom of the list, and get a modifier 
 
 <Example title="Welcome Mat Partially Completed Steps">
   <CodeView>
-    <Context>
-      {baseExamples[0].element}
-    </Context>
+    <WelcomeMat.Context>
+      {getDisplayElementById(WelcomeMat.examples, "with-completed-tiles")}
+    </WelcomeMat.Context>
   </CodeView>
 </Example>
 
@@ -44,9 +47,9 @@ Only Trailhead connected mats may have the Trailhead font for the header.
 
 <Example title="Welcome Mat Trailhead">
   <CodeView>
-    <Context>
-      {WelcomeMatTrailhead}
-    </Context>
+    <WelcomeMat.Context>
+      {WelcomeMatTrailhead.default}
+    </WelcomeMat.Context>
   </CodeView>
 </Example>
 
@@ -60,8 +63,32 @@ Additionally, the progress indicator should be replaced with a button to view th
 
 <Example title="Welcome Mat Trailhead Complete">
   <CodeView>
-    <Context>
-      {trailheadExamples[0].element}
-    </Context>
+    <WelcomeMat.Context>
+      {getDisplayElementById(WelcomeMatTrailhead.examples, "trailhead-complete")}
+    </WelcomeMat.Context>
+  </CodeView>
+</Example>
+
+## Info-only
+In the event your displayed steps are informational rather than actionable, you can set the tiles to "info only" mode. In this variation, the `<a>` tags are removed from the tiles. The tiles also lose their button appearance, removing borders and shadows.
+
+The tile container background changes from gray to white, which is done by applying the modifier class of `slds-welcome-mat__tiles_info-only` to the `slds-welcome-mat__tiles` element. Since the tiles aren't actionable, also apply the modifier class of `slds-welcome-mat__tile-info-only` to each `slds-welcome-mat__tile` element.
+
+<Example title="Welcome Mat with only informational content">
+  <CodeView>
+    <WelcomeMat.Context>
+      {InfoOnly.default}
+    </WelcomeMat.Context>
+  </CodeView>
+</Example>
+
+## Splash
+The Splash variant is a singular interstitial modal. It removes the actionable/content column and allows the background image to span the full-width. Make sure that the areas of your background image behind your text provide enough contrast to ensure accessibility.
+
+<Example title="Splash">
+  <CodeView>
+    <WelcomeMat.Context>
+      {Splash.default}
+    </WelcomeMat.Context>
   </CodeView>
 </Example>
