--- a/packages/design-system/ui/components/buttons/docs.mdx
+++ b/packages/design-system/ui/components/buttons/docs.mdx
@@ -54,6 +54,24 @@ If you absolutely cannot use a `<button />` element for an action and instead ne
 
 Finally, color alone does not suffice when conveying the meaning of buttons. Ensure that the text you use in the button matches the meaning you are trying to convey via color. For example, if you use the destructive button to point out a potential warning, make sure the text communicates the same message.
 
+### Links that look like Buttons
+
+<Blockquote type="a11y" header="Accessibility Warning">
+  Use these with caution - dictation software users may not be able to properly identify these actions, as they can say "show buttons" and these won't highlight since they are semantically links, even though they may look like buttons.
+</Blockquote>
+
+<CodeView>
+  <React.Fragment>
+    {getDisplayElementById(ButtonExamples.examples, 'base-link')}
+    {getDisplayElementById(ButtonExamples.examples, 'neutral-link')}
+    {getDisplayElementById(ButtonExamples.examples, 'brand-link')}
+    {getDisplayElementById(ButtonExamples.examples, 'outline-brand-link')}
+    {getDisplayElementById(ButtonExamples.examples, 'destructive-link')}
+    {getDisplayElementById(ButtonExamples.examples, 'text-destructive-link')}
+    {getDisplayElementById(ButtonExamples.examples, 'success-link')}
+  </React.Fragment>
+</CodeView>
+
 ## Variations
 
 ### Base
